// {C} Copyright 2020 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

package routing;

import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "routing.proto";

option (venice.fileGrpcDest) = "pen-perseus";
option (venice.fileCategory) = "routing";
option (venice.fileApiServerBacked) = false;

service RoutingV1 {
    option (venice.apiPrefix)           = "";
    option (venice.apiVersion)          = "v1";

    rpc ListNeighbors(NeighborFilter) returns(NeighborList) {
        option (google.api.http) = {
            get: "/{Instance}/neighbors"
        };
    };

    rpc HealthZ(EmptyReq) returns(Health) {
        option (google.api.http) = {
            get: "/{Instance}/health"
        };
    }

    rpc ListRoutes(RouteFilter) returns(RouteList) {
        option (google.api.http) = {
            post: "/{Instance}/routes"
            body: "*"
            additional_bindings {
                get: "/{Instance}/routes"
            }
        };
    };
}
